fixed bug that caused product detail page not to render when there is no furniture thumbnail and aligned facebook and twitter buttons too

--- a/IslandFurniture/IslandFurniture-eservices-war/web/assets/css/eservice.css
+++ b/IslandFurniture/IslandFurniture-eservices-war/web/assets/css/eservice.css
@@ -62,7 +62,7 @@ hr{
     margin:1em 0;
     padding:0;height:1px;
     border:0;
-    border-top:1px solid #e3e6f3;
+    border-top:1px solid #D6D6D0;
 }
 
 .scroll-list {
@@ -79,6 +79,10 @@ text-decoration: line-through;
 body {
   font-family: 'Open Sans', sans-serif;
   position: relative;
+}
+
+.fb-share-button {
+   vertical-align: top;    
 }
 
 ul li {
